--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+futures = "0.3.30"
+model.workspace = true
+mongodb = { version = "3.0.1", features = ["rustls-tls"] }
+thiserror = "1.0.63"
