--- a/crates/route/Cargo.toml
+++ b/crates/route/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0.205", features = ["derive"] }
+axum.workspace = true
+service.workspace = true
