--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 async-trait = "0.1.81"
 futures = "0.3.30"
 model.workspace = true
-mongodb = { version = "3.0.1", features = ["rustls-tls"] }
+mongodb.workspace = true
 thiserror = "1.0.63"
