--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ mongodb = { version = "3.0.1", features = ["rustls-tls"] }
 axum.workspace = true
 config.workspace = true
 route.workspace = true
+service.workspace = true
+tokio = { version = "1.39.2", features = ["full"] }
+mongodb.workspace = true
