--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,15 @@ route = { path = "crates/route" }
 service = { path = "crates/service" }
 axum = { version = "0.7.5", features = ["macros"] }
 mongodb = { version = "3.0.1", features = ["rustls-tls"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [dependencies]
+tokio = { version = "1.39.2", features = ["full"] }
 axum.workspace = true
 config.workspace = true
 route.workspace = true
 service.workspace = true
-tokio = { version = "1.39.2", features = ["full"] }
 mongodb.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
