--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ axum = { version = "0.7.5", features = ["macros"] }
 mongodb = { version = "3.0.1", features = ["rustls-tls"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-opentelemetry-instrumentation-sdk = "0.19.0"
+axum-tracing-opentelemetry = "0.19.0"
 
 [dependencies]
 tokio = { version = "1.39.2", features = ["full"] }
@@ -25,3 +27,6 @@ service.workspace = true
 mongodb.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+opentelemetry = "0.24.0"
+init-tracing-opentelemetry = { version = "0.19.0", features = ["jaeger", "tracing_subscriber_ext"] }
+dotenv = "0.15.0"
