--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "alephium-stream-api"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "api"
+path = "src/api/main.rs"
+
 [workspace]
 members = ["crates/*"]
 
