--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "api"
 path = "src/api/main.rs"
 
+[[bin]]
+name = "watchdog"
+path = "src/watchdog/main.rs"
+
 [workspace]
 members = ["crates/*"]
 
