--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,5 @@ tracing-subscriber.workspace = true
 opentelemetry = "0.24.0"
 init-tracing-opentelemetry = { version = "0.19.0", features = ["jaeger", "tracing_subscriber_ext"] }
 dotenv = "0.15.0"
+bs58 = "0.5.1"
+hex = "0.4.3"
