--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,10 @@ service.workspace = true
 mongodb.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+model.workspace = true
+alephium-sdk.workspace = true
 opentelemetry = "0.25.0"
 init-tracing-opentelemetry = { version = "0.20.0", features = ["jaeger", "tracing_subscriber_ext"] }
 dotenv = "0.15.0"
-bs58 = "0.5.1"
-hex = "0.4.3"
+url = "2.5.2"
+thiserror = "1.0.63"
