feat(config): add `watchdog` section and `node_uri` parameter

--- a/config.toml
+++ b/config.toml
@@ -5,3 +5,6 @@ database = "alephium-stream"
 [server]
 host = "127.0.0.1"
 port = 8080
+
+[watchdog]
+node_uri = "https://node.testnet.alephium.org"
